src/test/ui/error-codes/E0262.stderr
error[E0262]: invalid lifetime parameter name: `'static`
  --> $DIR/E0262.rs:1:8
   |
LL | fn foo<'static>(x: &'static str) { } //~ ERROR E0262
   |        ^^^^^^^ 'static is a reserved lifetime name

error: aborting due to previous error

For more information about this error, try `rustc --explain E0262`.
